@@ -1,3 +1,10 @@
+2010-06-21  Roland McGrath  <roland@redhat.com>
+
+	* readelf.c (dwarf_tag_string): Handle new v4 tags.
+
+	* readelf.c (print_ops): Use 64-bit types for LEB128 operands.
+	(print_cfa_program): Likewise.
+
 2010-06-20  Roland McGrath  <roland@redhat.com>
 
 	* readelf.c (print_debug_units): New function, broken out of ...
