@@ -1,3 +1,8 @@
+2010-06-21  Roland McGrath  <roland@redhat.com>
+
+	* memory-access.h (get_sleb128_rest_return): Fix sign extension for
+	10-byte case.
+
 2010-06-20  Roland McGrath  <roland@redhat.com>
 
 	* libdw_findcu.c (__libdw_findcu): Take new flag argument,
